added API key auth
